[gd_scene load_steps=2 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]

[node name="SimpleWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="fps_container" type="ColorRect" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="fps" type="Label" parent="fps_container"]
margin_right = 40.0
margin_bottom = 14.0
text = "FPS"

[node name="gui" type="CanvasLayer" parent="."]

[node name="b_draw" type="Button" parent="gui"]
margin_left = 70.0
margin_top = 60.0
margin_right = 220.0
margin_bottom = 100.0
text = "Draw lines"

[node name="block" type="ColorRect" parent="gui"]
margin_left = 50.0
margin_top = 10.0
margin_right = 330.0
margin_bottom = 50.0
color = Color( 0, 0.619608, 0.890196, 1 )

[node name="lines_num" type="HSlider" parent="gui/block"]
anchor_right = 0.08
margin_left = 10.0
margin_right = 207.6
margin_bottom = 40.0
min_value = 1.0
max_value = 2000.0
value = 1.0
rounded = true

[node name="label" type="Label" parent="gui/block"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
text = "#"
align = 1
valign = 1

